--- a/Test3/Views/Home/Create.cshtml
+++ b/Test3/Views/Home/Create.cshtml
@@ -22,11 +22,14 @@
 
     <div class="form-group">
         <div>
-            <i class="fas fa-undo"><input type="submit" value="Create" class="btn btn-primary" /> </i>  | @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Create" class="btn btn-primary" />&nbsp;&nbsp;|&nbsp;&nbsp;
+            <i class="fas fa-undo">
+                &nbsp;
+                @Html.ActionLink("Back to List", "Index")
+            </i>
         </div>
     </div>
 }
-
 <div>
    
 </div>
