--- a/Test3/Views/Home/Create.cshtml
+++ b/Test3/Views/Home/Create.cshtml
@@ -10,31 +10,44 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Kisiler</h4>
-        <hr />
-        <div class="form-group">
-            <label for="exampleInputEmail1">@Html.LabelFor(model => model.Ad)</label>
-            @Html.EditorFor(model => model.Ad, new { htmlAttributes = new { @class = "form-control", placeholder = "Enter email" } })
-            @Html.ValidationMessageFor(model => model.Ad, "", new { @class = "text-danger" })
-        </div>
+    <hr />
+    @Html.ValidationSummary(false, "Gerekli Alanları Doldurunuz.!", htmlAttributes: new { @class = "alert alert-danger" })
+    <div>
+        <form>
+            <div class="form-group row">
+                <label for="Ad" class="col-sm-2 col-form-label">
+                    @Html.LabelFor(model => model.Ad)
+                </label>
+                <div class="col-sm-10">
+                    @Html.EditorFor(model => model.Ad, new {@class = "form-control"})
+                    @Html.ValidationMessageFor(model => model.Ad, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="Soyad" class="col-sm-2 col-form-label">
+                    @Html.LabelFor(model => model.Soyad)
+                </label>
+                <div class="col-sm-10">
+                    @Html.EditorFor(model => model.Soyad, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Soyad, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div>
+                    <input type="submit" value="Submit" class="btn btn-primary" />&nbsp;&nbsp;|&nbsp;&nbsp;
+                    <i class="fas fa-undo">
+                        &nbsp;
+                        @Html.ActionLink("Back to List", "Index")
+                    </i>
+                </div>
+            </div>
+        </form>
     </div>
 
-    <div class="form-group">
-        <div>
-            <input type="submit" value="Create" class="btn btn-primary" />&nbsp;&nbsp;|&nbsp;&nbsp;
-            <i class="fas fa-undo">
-                &nbsp;
-                @Html.ActionLink("Back to List", "Index")
-            </i>
-        </div>
-    </div>
 }
-<div>
-   
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
-
